# plotsrv

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  zensical.toml
.github/workflows/: benchmark.yml  ci.yml  docs.yml
docs/: index.md  release-notes.md
docs/about/: contributing.md  philosophy.md
docs/examples/: eda-on-a-server.md  etl-pipeline.md  index.md
docs/get-started/: configuration-basics.md  installation.md  interactive-use.md  quick-start.md  run-a-plotsrv-server.md  watch-files.md  ways-to-use.md  what-is-plotsrv.md
docs/guides/: cli.md  deployment-patterns.md  freshness.md  python-api.md  renderers.md  storage-and-history.md  tracebacks.md  ui-customisation.md
docs/stylesheets/: extra.css
site/: 404.html  index.html  search.json
site/about/contributing/: index.html
site/about/philosophy/: index.html
site/about/testing-and-benchmarks/: index.html
site/demos/: index.html
site/features/automatic-config/: index.html
site/features/cli/: index.html
site/features/freshness-indicators/: index.html
site/features/historical-snapshots/: index.html
site/features/traceback-observability/: index.html
site/features/ui-customisation/: index.html
site/features/view-labels-and-sections/: index.html
site/get-started/configuration-basics/: index.html
site/get-started/installation/: index.html
site/get-started/interactive-use/: index.html
site/get-started/quick-start/: index.html
site/get-started/run-a-plotsrv-server/: index.html
site/get-started/watch-files/: index.html
site/get-started/ways-to-use/: index.html
site/get-started/what-is-plotsrv/: index.html
site/markdown/: index.html
site/release-notes/: index.html
site/renderers/: index.html
src/plotsrv/: .server.py.swp  __init__.py  app.py  artifacts.py  backends.py  capture.py  cli.py  config.py  config_writer.py  decorators.py  dev_validate.py  dev_validate3.py  discovery.py  file_kinds.py  html.py  json_model.py  loader.py  publisher.py  runner.py  runtime.py  server.py  service.py  settings.py  store.py  tracebacks.py  ui_config.py
src/plotsrv/renderers/: __init__.py  base.py  html.py  image.py  json_tree.py  limits.py  markdown.py  plot.py  python.py  registry.py  table.py  text.py  traceback.py
src/plotsrv/static/: plotsrv.css  plotsrv.js
src/plotsrv/static/css/: base.css  controls.css  layout.css  status.css
src/plotsrv/static/css/renderers/: code.css  html.css  json.css  markdown.css  plot.css  table.css  text.css  traceback.css
src/plotsrv/static/js/core/: app.js  auto_refresh.js  dom.js  history.js  state.js  status.js  storage.js  view_selector.js
src/plotsrv/static/js/renderers/: artifact.js  code.js  json.js  plot.js  table.js  text.js
src/plotsrv/storage/: __init__.py  backend.py  latest.py  models.py  policy.py  worker.py
tests/: test_app_more.py  test_app_routes.py  test_app_storage_and_snapshots.py  test_artifact_route.py  test_backends.py  test_capture.py  test_cli_config_cmds.py  test_cli_coverage_push.py  test_cli_exclude.py  test_cli_main_edges.py  test_cli_more.py  test_cli_parser.py  test_cli_store_cmds.py  test_cli_utils.py  test_config.py  test_config_ini.py  test_config_more_storage_freshness.py  test_config_yaml.py  test_decorators.py  test_decorators_more.py  test_discovery.py  test_file_kinds.py  test_html.py  test_json_model.py  test_loader.py  test_plotsrv_integration.py  test_publisher.py  test_publisher_even_more.py  test_publisher_mopup.py  test_publisher_more.py  test_renderers_default_registry_integration.py  test_renderers_html_markdown.py  test_renderers_image_traceback.py  test_renderers_json_tree.py  test_renderers_json_tree_document.py  test_renderers_json_tree_more.py  test_renderers_limits_text.py  test_renderers_registry.py  test_renderers_registry_more.py  test_renderers_small_mopup.py  (+14 more)
tests/benchmarks/: test_bench_discovery.py  test_bench_renderers.py  test_bench_routes.py
tests/smoke/: smoke-test.sh
tests/validation/: simple_validation_1.py
