[project]
name = "plotsrv"
version = "0.0.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "bleach>=6.3.0",
    "fastapi>=0.121.3",
    "markdown>=3.10.2",
    "matplotlib>=3.10.7",
    "plotnine>=0.15.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "seaborn>=0.13.2",
    "polars-lts-cpu>=1.33.1",
    "pyarrow>=20.0.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "psutil>=7.2.2",
]

[project.scripts]
plotsrv = "plotsrv.cli:main"


[tool.coverage.run]
source = ["plotsrv"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
omit = [
  "tests/*",
]
