[project]
name = "plotsrv"
version = "0.0.7"
description = "Cheap observability for Python processes"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bleach~=6.3.0",
    "fastapi~=0.121.3",
    "markdown~=3.10.2",
    "matplotlib~=3.10.7",
    "plotnine~=0.15.1",
    "pyyaml~=6.0.3",
    "requests~=2.32.5",
    "uvicorn~=0.38.0",
]

[dependency-groups]
test = [
    "pytest~=9.0.1",
    "pytest-benchmark~=5.2.3",
    "pytest-cov~=7.0.0",
    "httpx~=0.28.1",
]
dev = [
    "seaborn~=0.13.2",
    "polars-lts-cpu~=1.33.1",
    "pyarrow~=20.0.0",
]

[project.scripts]
plotsrv = "plotsrv.cli:main"

[tool.coverage.run]
source = ["plotsrv"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
omit = [
  "tests/*",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotsrv"]
include = [
  "src/plotsrv/static/**",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true