[project]
name = "plotsrv"
version = "0.3.1"
description = "Cheap observability for Python processes"
authors = [
    { name = "Samuel Anees-Hill", email = "plotsrv@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "bleach>=6.0",
    "fastapi>=0.111,<1",
    "markdown>=3.6,<4",
    "matplotlib>=3.8,<4",
    "plotnine>=0.14",
    "pyyaml>=6.0",
    "requests>=2.31,<3",
    "uvicorn>=0.30,<1",
]

[dependency-groups]
test = [
    "pytest>=9,<10",
    "pytest-benchmark>=5,<6",
    "pytest-cov>=7,<8",
    "httpx>=0.28,<1",
]
dev = [
    "seaborn>=0.13",
    "polars-lts-cpu>=1.33",
    "pyarrow>=20",
    "ipython",
    "debugpy",
]
docs = [
    "zensical>=0.0.41",
]

[project.scripts]
plotsrv = "plotsrv.cli:main"

[tool.coverage.run]
source = ["plotsrv"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
omit = [
  "tests/*",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plotsrv"]
include = [
  "src/plotsrv/static/**",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
